cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(BOOST_INCLUDE_DIR /usr/include)
set(BOOST_ROOT /usr/lib64)

project(proj)

add_executable(main main.cpp)
add_library(eigen_target INTERFACE)
include_directories(./include)
include_directories(./thirdpart/amgcl-1.4.3)
add_subdirectory(./src)
add_subdirectory(./thirdpart/eigen-3.4.0)
add_subdirectory(./thirdpart/amgcl-1.4.3)
find_package(Eigen3 REQUIRED)
find_package(Boost REQUIRED)
target_link_libraries(main PUBLIC fdm2d Eigen3::Eigen amgcl::amgcl eigen_target)
